buttons to homepage & variety of minor style tweaks

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -54,6 +54,7 @@ $font-size: calc(12px + 0.390625vw);
   width: $text-container-size;
   padding: 1rem min(5rem, 3vw);
   text-align: center;
+  text-wrap: balance;
 
   h3,
   p {
