--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -22,10 +22,10 @@ $days-border-color: $blue-color;
 //FONTSIZES
 $welcome-title-size: calc(28px + 0.390625vw);
 $welcome-msg-size: calc(16px + 0.390625vw);
-$hours-msg-size: calc(16px + 0.390625vw);
-$hours-title-size: calc(18px + 0.390625vw);
-$hours-days-size: calc(16px + 0.390625vw);
-$hours-times-size: calc(14px + 0.390625vw);
+$hours-msg-size: calc(14px + 0.390625vw);
+$hours-title-size: calc(16px + 0.390625vw);
+$hours-days-size: calc(14px + 0.390625vw);
+$hours-times-size: calc(12px + 0.390625vw);
 
 #homepage-container *:not(i) {
   font-family: "Poppins", sans-serif;
@@ -71,10 +71,43 @@ $hours-times-size: calc(14px + 0.390625vw);
   }
 
   #welcome-msg {
-    margin-top: 2rem;
     font-size: $welcome-msg-size;
+    text-transform: uppercase;
+    text-wrap: balance;
+
+    margin-top: 2rem;
     max-width: 80%;
     color: $welcome-msg-color;
+  }
+
+  .button-container {
+    display: flex;
+    gap: 15px;
+
+    button {
+      margin-top: 20px;
+      background-color: transparent;
+      border: 2px solid $hours-title-border-color;
+      color: $hours-msg-color;
+      text-transform: capitalize;
+      padding: 10px 15px;
+      border-radius: 5px;
+    }
+
+    button:hover,
+    button:focus {
+      border-color: $welcome-title-color;
+      color: $welcome-title-color;
+    }
+
+    .inverted-btn {
+      background-color: $blue-dark-color;
+    }
+
+    .inverted-btn:hover,
+    .inverted-btn:focus {
+      border-color: $gold-color;
+    }
   }
 }
 
@@ -95,6 +128,8 @@ $hours-times-size: calc(14px + 0.390625vw);
     padding: 30px;
     flex: 1;
     font-size: $hours-msg-size;
+    text-wrap: balance;
+
     color: $hours-msg-color;
 
     //background-color: rgba(0, 0, 0, 0.2);
@@ -157,6 +192,10 @@ $hours-times-size: calc(14px + 0.390625vw);
       color: $hours-times-color;
     }
   }
+}
+
+button {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 800px) {
