--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -177,6 +177,7 @@ button {
   border: 2px solid $hours-title-border-color;
   border-radius: 5px;
   text-transform: uppercase;
+  font-weight: 600;
   cursor: pointer;
 }
 
