changed photo to chips

--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -139,7 +139,7 @@
 
 #slide1 {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("../assets/FH_potatoes.png");
+    url("../assets/FH_chips.jpeg");
 }
 
 #slide2 {
